<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    tools:context=".fragments.RegisterFragment">


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="24sp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>


    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:inputType="text"
        android:textSize="24sp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="26sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"
            android:id="@+id/radioButtonMale"/>
        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButtonFemale"/>

    </RadioGroup>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:textSize="24sp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>
    <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textSize="24sp"/>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/buttonRegister"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            />

        <Button
            android:id="@+id/buttonCancelRegister"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>